fix extension files